[package]
name = "ttt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
winit = "0.30"
softbuffer = "0.4"
tiny-skia = { git = "https://github.com/linebender/tiny-skia.git", rev = "624257c" }
async-task = "4.7"
rand = "0.9"
rayon = "1.11"
atomic-waker = "1.1"
scc = "3.1"
blocking = "1.6"